# sentinal.io

./: .gitignore  README.md  pyproject.toml
Backend/: .gitignore  __init__.py  main.py  pyproject.toml
Backend/api/: __init__.py
Backend/api/v1/dependencies/: service_deps.py
Backend/api/v1/middlewares/: error_handler.py
Backend/api/v1/routes/: __init__.py  image.py  query.py  video.py
Backend/api/v1/schemas/analyzer/: request.py  response.py
Backend/api/v1/schemas/image/: response.py
Backend/api/v1/schemas/query/: request.py  response.py
Backend/config/v1/constants/: general.py
Backend/core/v1/agent/: flow.py  prompts.py  snapshot.py  weboperations.py
Backend/core/v1/agent/schema/: state.py
Backend/core/v1/common/: exceptions.py  logger.py
Backend/core/v1/db/: db_connection.py
Backend/core/v1/llm/: llm_client.py
Backend/core/v1/prompts/: __init__.py  prompts.py
Backend/services/v1/image/: service.py
Backend/services/v1/query/: __init__.py  service.py
Backend/services/v1/s3/: service.py
Backend/services/v1/video/: deepfake.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/app/app/deepfake/: page.tsx
frontend/app/app/image-analysis/: page.tsx
frontend/app/app/stats/: page.tsx
frontend/components/: AnimatedCrystals.tsx  AnimatedHero3D.tsx
frontend/components/app/: Side-bar.tsx
frontend/components/nav-bar/: nav-bar.tsx
frontend/components/side-bar/: Header.tsx  Links.tsx
frontend/components/ui/: beams-background.tsx
